Fix CSS - tm* header, spacings, remove float right on bar menu, fix overlap with 'search' and 'akce.'

--- a/cms/web.css
+++ b/cms/web.css
@@ -376,13 +376,13 @@ div.LabelDrop * {cursor:pointer; }
   display: inline-block; margin-top: 13px; margin-right: 12px; background: inherit}
 #page_tm a.jump { vertical-align: top; }
 #page_tm a span {padding: 22px 0; margin: 0 6px}
-#page_tm #bar_menu { float:right; font-size:1.5em !important; width:1.2em; cursor:pointer; position: relative  }
+#page_tm #bar_menu { font-size:1.5em !important; width:1.2em; cursor:pointer; position: relative  }
 
 /*search bar*/
-.header-search {display: inline-block;position: relative;padding-right: 25px;padding-left: 5px;}
-.header-search button.search-submit {overflow: hidden;box-shadow: none;margin-left: -40px;background: 0 0;color: #6d6d6d;line-height: 0;
+.header-search {display: inline-block;position: relative;padding-right: 30px;padding-left: 5px;transform: translateY(-4px);}
+.header-search button.search-submit {overflow: hidden;box-shadow: none;margin-left: -25px;background: 0 0;color: #6d6d6d;line-height: 0;
   padding: 0 .7em;min-height: auto;cursor: pointer;max-width: 100%;border: none;font-weight: bolder;
-  text-transform: uppercase;display: inline-block;position: absolute;top: 28px;outline: none;}
+  text-transform: uppercase;display: inline-block;position: absolute;top: 25px;outline: none;}
 .header-search .search-icon {transform: translate(10px, 5px);-ms-transform: translate(10px, 5px);-moz-transform: translate(10px, 5px);
   line-height: 0;display: inline-block;position: relative;
   box-shadow: none;color: rgba(0,0,0,.55);cursor: pointer;}
@@ -399,7 +399,7 @@ div.LabelDrop * {cursor:pointer; }
   display: block;overflow: hidden;margin-top: -7px;transition: all 0.2s linear;top:100%;
   transform: translateY(25px);-ms-transform: translateY(25px);-moz-transform: translateY(25px);}
 .header-search.active .header-search-container {height: auto;overflow: initial;z-index: 26;top: auto;
-  transform: translateY(0px);-ms-transform: translateY(0px);-moz-transform: translateY(0px);
+  transform: translate(-5px, 32px);-ms-transform: translate(-5px, 32px);-moz-transform: translate(-5px, 32px);
 }
 .header-search .header-search-container::before {border-top: 1px solid #eaecee;border-left: 1px solid #eaecee;
   background: #fff;content: "";position: absolute;top: -8px;right: 15px;width: 15px;height: 15px;
@@ -521,7 +521,7 @@ div.LabelDrop * {cursor:pointer; }
 
 /* výběrové podmínky */
 #vyber {width:100%; font-weight:bold; color: black; font-size: 9pt;display:inline-flex; background-color: #cadfd9;
-  height: 33px; line-height: 31px; position: absolute; }
+  height: 33px; line-height: 31px; position: relative; z-index: -1; }
 #vyber label{  display: inline-block;background-color: rgba(255, 255, 255, .7);  color: #adadad;  border-radius: 25px;
   margin: 0 5px;  white-space: nowrap;  -webkit-touch-callout: none;  -webkit-user-select: none;  -moz-user-select: none;
   -ms-user-select: none;  user-select: none;  -webkit-tap-highlight-color: transparent;  transition: all .2s;  padding: 0 9px;
